--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YuriiStreltsov/goit-js-hw-12-countries.git"
+    "url": "git+https://github.com/YuriiStreltsov/goit-js-hw-13-image-finder.git"
   },
   "keywords": [],
   "author": "Yurii Streltsov",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/YuriiStreltsov/goit-js-hw-12-countries/issues"
+    "url": "https://github.com/YuriiStreltsov/goit-js-hw-13-image-finder/issues"
   },
-  "homepage": "https://github.com/YuriiStreltsov/goit-js-hw-12-countries#readme",
+  "homepage": "https://github.com/YuriiStreltsov/goit-js-hw-13-image-finder#readme",
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
@@ -40,6 +40,7 @@
     "html-loader": "^1.3.1",
     "html-webpack-plugin": "^4.5.0",
     "img-loader": "^3.0.2",
+    "material-design-icons": "^3.0.1",
     "mini-css-extract-plugin": "^0.11.2",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
